Adopt CashFlow changes [wip]

--- a/webasyst-x/src/main/res/layout/row_installation_list.xml
+++ b/webasyst-x/src/main/res/layout/row_installation_list.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="installation"
-            type="com.webasyst.api.Installation" />
+            type="com.webasyst.x.installations.Installation" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
